--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
     </header>
     <section class="content">
         <menu class="content__menu">
-            <ul class="menu">
+            <ul class="menu" id="nav-bar">
                 <li class="menu__item menu__item_friends"><a href="#" class="menu__link">Friends</a></li>
                 <li class="menu__item menu__item_photos"><a href="#" class="menu__link">Photos</a></li>
                 <li class="menu__item menu__item_videos"><a href="#" class="menu__link">Videos</a></li>
@@ -334,6 +334,10 @@
 <!--<script src="http://vkontakte.ru/js/api/openapi.js" type="text/javascript"></script>-->
 <script src="web/js/xhrService.js"></script>
 <script src="web/js/conversation-component.js"></script>
+<!--<script src="web/js/friends-omponent.js"></script>-->
+<script src="web/js/router.js"></script>
+<script src="web/js/navbar.js"></script>
 <script src="web/js/app.js"></script>
+<script src="web/js/main.js"></script>
 </body>
 </html>
