--- a/src/index.html
+++ b/src/index.html
@@ -188,7 +188,7 @@
             </div>
         </div>
         <div class="content__text-container">
-            <div class="conver-menu">
+            <div class="conver-menu" style="display: none">
                 <div class="conver-menu__users">
                     <a href="#" class="conver-menu__link"><img src="images/photo.png"></a>
                     <a href="#" class="conver-menu__link"><img src="images/photo.png"></a>
@@ -330,10 +330,9 @@
 </section>
 </div>
 
-<!--<script src="http://vkontakte.ru/js/api/openapi.js" type="text/javascript"></script>-->
 <script src="web/js/xhrService.js"></script>
 <script src="web/js/conversation-component.js"></script>
-<!--<script src="web/js/friends-omponent.js"></script>-->
+<script src="web/js/friends-component.js"></script>
 <script src="web/js/router.js"></script>
 <script src="web/js/navbar.js"></script>
 <script src="web/js/app.js"></script>
