menu clikc observer

--- a/src/index.html
+++ b/src/index.html
@@ -331,6 +331,7 @@
 </div>
 
 <script src="web/js/xhrService.js"></script>
+<script src="web/js/menuObserver.js"></script>
 <script src="web/js/conversation-component.js"></script>
 <script src="web/js/friends-component.js"></script>
 <script src="web/js/router.js"></script>
