input clear after sending

--- a/src/index.html
+++ b/src/index.html
@@ -313,7 +313,7 @@
                     <form class="chart__form" id="chart-form">
                         <div class="chart__input-wrap">
                             <div class="chart__input">
-                                <input placeholder="Your message" autocomplete="off" name="message">
+                                <input placeholder="Your message" autocomplete="off" id="message-input" name="message">
                                 <div class="chart__icons-container">
                                     <i class="chart__icon chart__icon_attach"></i>
                                     <i class="chart__icon chart__icon_photo"></i>
