--- a/web/index.html
+++ b/web/index.html
@@ -304,7 +304,6 @@
                                 <!--are sold in the USA. Hope that some day, my photos will be sold in every country of the-->
                                 <!--world! :D-->
                             <!--</p>-->
-
                         <!--</div>-->
                     <!--</div>-->
                 </div>
@@ -332,8 +331,8 @@
 
 <script src="web/js/xhrService.js"></script>
 <script src="web/js/Observer.js"></script>
-<script src="web/js/conversation-component.js"></script>
-<script src="web/js/friends-component.js"></script>
+<script src="web/js/conversationComponent.js"></script>
+<script src="web/js/friendsComponent.js"></script>
 <script src="web/js/router.js"></script>
 <script src="web/js/navbar.js"></script>
 <script src="web/js/app.js"></script>
