--- a/src/index.html
+++ b/src/index.html
@@ -64,14 +64,14 @@
         </menu>
         <div class="content__right-column">
             <div class="conversation">
-                <div class="conversation__menu">
-                    <span class="conversation__link active">Conversations</span>
-                    <span class="conversation__link">Friends</span>
-                    <span class="conversation__link conversation__link_dots"></span>
-                </div>
-                <div class="conversation__search">
-                    <input class="conversation__input" placeholder="Find a friend">
-                </div>
+                <!--<div class="conversation__menu">-->
+                    <!--<span class="conversation__link active">Conversations</span>-->
+                    <!--<span class="conversation__link">Friends</span>-->
+                    <!--<span class="conversation__link conversation__link_dots"></span>-->
+                <!--</div>-->
+                <!--<div class="conversation__search">-->
+                    <!--<input class="conversation__input" placeholder="Find a friend">-->
+                <!--</div>-->
                 <div class="conversation__messages" id="dialogs-container">
                     <!--<div class="conversation__message new">-->
                     <!--<img class="conversation__avatar" src="images/photo.png">-->
@@ -309,6 +309,7 @@
                 </div>
 
                 <div class="chart__form-container">
+                    <span class="chart__scroll-to-bottom" id="scroll-bottom">&darr;</span>
                     <form class="chart__form" id="chart-form">
                         <div class="chart__input-wrap">
                             <div class="chart__input">
