--- a/web/index.html
+++ b/web/index.html
@@ -1,15 +1,14 @@
-
 <!doctype html>
 <html>
 <head>
     <meta charset="utf-8">
     <title>New Project</title>
     <link rel="stylesheet" href="web/css/app.css">
+    <link rel="stylesheet" href="web/css/emojionearea.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Generate using http://realfavicongenerator.net/ -->
-
-
-
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script type="text/javascript" src="web/js/emojionearea.min.js"></script>
 </head>
 <body>
 
@@ -313,12 +312,12 @@
                     <form class="chart__form" id="chart-form">
                         <div class="chart__input-wrap">
                             <div class="chart__input">
-                                <input placeholder="Your message" name="message">
-                                <div class="chart__icons-container">
-                                    <i class="chart__icon chart__icon_attach"></i>
-                                    <i class="chart__icon chart__icon_photo"></i>
-                                    <i class="chart__icon chart__icon_smile"></i>
-                                </div>
+                                <input placeholder="Your message" name="message" id="message-input">
+                                <!--<div class="chart__icons-container chart__icons-container_message">-->
+                                    <!--<i class="chart__icon chart__icon_attach"></i>-->
+                                    <!--<i class="chart__icon chart__icon_photo"></i>-->
+                                    <!--<i class="chart__icon chart__icon_smile"></i>-->
+                                <!--</div>-->
                             </div>
                             <button class="chart__input-button" type="submit">Send</button>
                         </div>
