--- a/src/index.html
+++ b/src/index.html
@@ -335,6 +335,7 @@
 <script src="web/js/Observer.js"></script>
 <script src="web/js/conversationComponent.js"></script>
 <script src="web/js/friendsComponent.js"></script>
+<script src="web/js/photosComponent.js"></script>
 <script src="web/js/router.js"></script>
 <script src="web/js/navbar.js"></script>
 <script src="web/js/app.js"></script>
