--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>New Project</title>
+    <title>VK CLIENT</title>
     <link rel="stylesheet" href="web/css/app.css">
     <link rel="stylesheet" href="web/css/emojionearea.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
