--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script type="text/javascript" src="web/js/emojionearea.min.js"></script>
+    <script type="text/javascript" src="web/js/libs/emojionearea.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -95,15 +95,15 @@
 
 </div>
 
-<script src="web/js/xhrService.js"></script>
-<script src="web/js/Observer.js"></script>
-<script src="web/js/albumsComponent.js"></script>
-<script src="web/js/conversationComponent.js"></script>
-<script src="web/js/friendsComponent.js"></script>
-<script src="web/js/photosComponent.js"></script>
-<script src="web/js/router.js"></script>
-<script src="web/js/navbar.js"></script>
-<script src="web/js/app.js"></script>
+<script src="web/js/app/services/xhrService.js"></script>
+<script src="web/js/app/Observer.js"></script>
+<script src="web/js/app/components/albumsComponent.js"></script>
+<script src="web/js/app/components/conversationComponent.js"></script>
+<script src="web/js/app/components/friendsComponent.js"></script>
+<script src="web/js/app/components/photosComponent.js"></script>
+<script src="web/js/app/router.js"></script>
+<script src="web/js/app/components/navbar.js"></script>
+<script src="web/js/app/app.js"></script>
 <script src="web/js/main.js"></script>
 </body>
 </html>
