--- a/src/index.html
+++ b/src/index.html
@@ -101,6 +101,7 @@
 <script src="web/js/app/components/conversationComponent.js"></script>
 <script src="web/js/app/components/friendsComponent.js"></script>
 <script src="web/js/app/components/photosComponent.js"></script>
+<script src="web/js/app/components/newsComponent.js"></script>
 <script src="web/js/app/router.js"></script>
 <script src="web/js/app/components/navbar.js"></script>
 <script src="web/js/app/app.js"></script>
