--- a/src/index.html
+++ b/src/index.html
@@ -63,46 +63,18 @@
         </menu>
 
         <div class="content__router-outlet router-outlet" id="router-outlet"></div>
-
-        <!--<div class="content__right-column">-->
-            <!--<div class="conversation">-->
-                <!--<div id="friends-search-container"></div>-->
-                <!--<div class="conversation__messages" id="dialogs-container">-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-
-        <!--<div class="content__text-container">-->
-           <!---->
-            <!--<section class="chart">-->
-                <!--<div class="chart__messages" id="messages-container"></div>-->
-
-                <!--<div class="chart__form-container">-->
-                    <!--<span class="chart__scroll-to-bottom" id="scroll-bottom">&darr;</span>-->
-                    <!--<form class="chart__form" id="chart-form">-->
-                        <!--<div class="chart__input-wrap">-->
-                            <!--<div class="chart__input">-->
-                                <!--<input placeholder="Your message" name="message" id="message-input">-->
-                            <!--</div>-->
-                            <!--<button class="chart__input-button" type="submit">Send</button>-->
-                        <!--</div>-->
-                        <!--<img src="images/photo.png">-->
-                    <!--</form>-->
-                <!--</div>-->
-            <!--</section>-->
-        <!--</div>-->
     </section>
 
 </div>
 
 <script src="web/js/app/services/xhrService.js"></script>
-<script src="web/js/app/Observer.js"></script>
+<script src="web/js/app/helpers/Observer.js"></script>
 <script src="web/js/app/components/albumsComponent.js"></script>
 <script src="web/js/app/components/conversationComponent.js"></script>
 <script src="web/js/app/components/friendsComponent.js"></script>
 <script src="web/js/app/components/photosComponent.js"></script>
 <script src="web/js/app/components/newsComponent.js"></script>
-<script src="web/js/app/router.js"></script>
+<script src="web/js/app/router/router.js"></script>
 <script src="web/js/app/components/navbar.js"></script>
 <script src="web/js/app/app.js"></script>
 <script src="web/js/main.js"></script>
