--- a/src/index.html
+++ b/src/index.html
@@ -67,6 +67,7 @@
 
 </div>
 
+<script src="web/js/app/models/models.js"></script>
 <script src="web/js/app/services/xhrService.js"></script>
 <script src="web/js/app/helpers/Observer.js"></script>
 <script src="web/js/app/components/albumsComponent.js"></script>
