--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,10 @@
 <script src="web/js/app/models/models.js"></script>
 <script src="web/js/app/services/xhrService.js"></script>
 <script src="web/js/app/helpers/Observer.js"></script>
+<script src="web/js/app/components/conversation/messageForm.js"></script>
+<script src="web/js/app/components/conversation/chatMessages.js"></script>
+<script src="web/js/app/components/conversation/chat.js"></script>
+<script src="web/js/app/components/conversation/multichatUsersSelect.js"></script>
 <script src="web/js/app/components/conversation/docsSelect.js"></script>
 <script src="web/js/app/components/conversation/chatUsers.js"></script>
 <script src="web/js/app/components/albumsComponent.js"></script>
