time offset added

--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,7 @@
 
 <script src="web/js/app/models/models.js"></script>
 <script src="web/js/app/services/xhrService.js"></script>
+<script src="web/js/app/helpers/TimeConvert.js"></script>
 <script src="web/js/app/helpers/Observer.js"></script>
 <script src="web/js/app/components/conversation/messageForm.js"></script>
 <script src="web/js/app/components/conversation/chatMessages.js"></script>
